[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
description = ""
name = "q-learning"
version = "0.1.0"

[tool.poetry.dependencies]
gym = "^0.18.3"
python = "^3.8"
tensorflow = "^2.5.0"

[tool.poetry.group.dev.dependencies]
black = "^21.5b1"
flake8 = "^3.9.2"
flake8-import-order = "^0.18.1"
mypy = "^0.812"
pylint = "^2.8.2"
pytest = "^6.2.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
